ddl de agregarmutiplicador

--- a/MAS_PMSU/packages.config
+++ b/MAS_PMSU/packages.config
@@ -23,14 +23,14 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net40" requireReinstallation="true" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net40" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net48" />
-  <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="7.0.0-preview.7.22375.6" targetFramework="net48" />
+  <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="7.0.0-preview.7.22375.6" targetFramework="net48" requireReinstallation="true" />
   <package id="Moment.js" version="2.29.4" targetFramework="net48" />
   <package id="QRCoder" version="1.4.3" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
-  <package id="System.Diagnostics.DiagnosticSource" version="8.0.0-preview.2.23128.3" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="8.0.0-preview.2.23128.3" targetFramework="net48" requireReinstallation="true" />
   <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net48" />
   <package id="System.IO.Packaging" version="4.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="7.0.0-preview.2.22152.2" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="7.0.0-preview.2.22152.2" targetFramework="net48" requireReinstallation="true" />
 </packages>
