--- a/MAS_PMSU/Web.config
+++ b/MAS_PMSU/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <!--
   Para obtener más información sobre cómo configurar la aplicación de ASP.NET, visite
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -29,10 +29,12 @@
     <add key="FolderPath" value="Files/"/>
   </appSettings>
   <connectionStrings>
-    <!--<add name="connIHMA" connectionString="server=174.142.60.68;user id=usu_redpash;database=sag_dicta;persistsecurityinfo=True;password=Redpash0801" providerName="MySql.Data.MySqlClient"/>-->
-    <add name="connSAG" connectionString="server=174.142.60.68;user id=usu_redpash;database=sag_dicta;;persistsecurityinfo=True;password=Redpash0801" providerName="MySql.Data.MySqlClient"/>
-    <add name="Excel03ConString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source={0};Extended Properties='Excel 8.0;HDR={1}'"/>
-    <add name="Excel07ConString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source={0};Extended Properties='Excel 8.0;HDR={1}'"/>
+    <add name="connSAG" connectionString="server=174.142.60.68;user id=usu_redpash;database=sag_dicta;;persistsecurityinfo=True;password=Redpash0801"
+      providerName="MySql.Data.MySqlClient" />
+    <add name="Excel03ConString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source={0};Extended Properties='Excel 8.0;HDR={1}'" />
+    <add name="Excel07ConString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source={0};Extended Properties='Excel 8.0;HDR={1}'" />
+    <add name="sag_dictaConnectionString" connectionString="server=Info-mas.org;password=Redpash0801;user id=usu_redpash;database=sag_dicta;persistsecurityinfo=True"
+      providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <!--
     Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
