--- a/MAS_PMSU/SAG_DICTA.vbproj
+++ b/MAS_PMSU/SAG_DICTA.vbproj
@@ -2187,6 +2187,12 @@
       <DependentUpon>ControlHRTo.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="pages\EmbarqueReport.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EmbarqueReport.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="pages\Inventario.aspx.designer.vb">
       <DependentUpon>Inventario.aspx</DependentUpon>
     </Compile>
@@ -2378,6 +2384,10 @@
     <EmbeddedResource Include="pages\AgregarMultiplicadorReport.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>AgregarMultiplicadorReport.vb</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pages\EmbarqueReport.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>EmbarqueReport.vb</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="pages\FichaReport.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
