--- a/MAS_PMSU/SAG_DICTA.vbproj
+++ b/MAS_PMSU/SAG_DICTA.vbproj
@@ -2487,6 +2487,36 @@
       <DependentUpon>InventarioReport.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="pages\InventarioReport7.vb">
+      <DependentUpon>InventarioReport7.rpt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <SubType>Component</SubType>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="pages\InventarioReport6.vb">
+      <DependentUpon>InventarioReport6.rpt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <SubType>Component</SubType>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="pages\InventarioReport5.vb">
+      <DependentUpon>InventarioReport5.rpt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <SubType>Component</SubType>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="pages\InventarioReport4.vb">
+      <DependentUpon>InventarioReport4.rpt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <SubType>Component</SubType>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="pages\InventarioReport3.vb">
+      <DependentUpon>InventarioReport3.rpt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <SubType>Component</SubType>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="pages\InventarioReport2.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -2612,6 +2642,26 @@
     <EmbeddedResource Include="pages\InventarioReport.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>InventarioReport.vb</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pages\InventarioReport7.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>InventarioReport7.vb</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pages\InventarioReport6.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>InventarioReport6.vb</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pages\InventarioReport5.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>InventarioReport5.vb</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pages\InventarioReport4.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>InventarioReport4.vb</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pages\InventarioReport3.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>InventarioReport3.vb</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="pages\InventarioReport2.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
